<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.RegisterActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/reg_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/reg_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="top"
            android:background="@color/colorPrimary"
            app:logo="@drawable/launcher_icon"
            app:title="Register"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/reg_cardView"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            app:cardBackgroundColor="@color/loginCardViewBackground"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_name_textInputLayout"
                    style="@style/MyRegisterTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_name"
                        style="@style/MyTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_name"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_username_textInputLayout"
                    style="@style/MyRegisterTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_username"
                        style="@style/MyTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_username"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_email_textInputLayout"
                    style="@style/MyRegisterTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_email"
                        style="@style/MyTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_phone_textInputLayout"
                    style="@style/MyRegisterTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_phone"
                        style="@style/MyTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_phone"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_address_textInputLayout"
                    style="@style/MyRegisterTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_address"
                        style="@style/MyTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_address"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reg_password_textInputLayout"
                    style="@style/MyRegisterTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    app:helperText="@string/confirm_password_before_registering"
                    app:helperTextEnabled="true"
                    app:helperTextTextAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    app:helperTextTextColor="@color/hintColor"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reg_password"
                        style="@style/MyTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/reg_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:src="@drawable/icon_register_user_fab"
            app:backgroundTint="@color/colorAccent"
            app:elevation="6dp"
            app:fabSize="normal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lg_register_button"
            style="@style/MyTextButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/register_button_height"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="15dp"
            android:text="@string/cancel"
            android:onClick="doCancel"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>