<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/lg_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondary">

        <ImageView
            android:id="@+id/lg_logo_imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            android:contentDescription="@string/content_description_login_logo_imageView" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/lg_cardView"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/lg_register_button"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:minHeight="200dp"
            app:cardBackgroundColor="@color/loginCardViewBackground"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lg_username_textInputLayout"
                    style="@style/MyLoginTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lg_username"
                        style="@style/MyTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_username"
                        android:hint="@string/hint_username"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lg_password_textInputLayout"
                    style="@style/MyLoginTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lg_password"
                        style="@style/MyTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/icon_password"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/lg_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/log_in_button_background"
                    android:text="@string/login"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    app:initialCornerAngle="10dp"
                    app:spinning_bar_color="@color/colorSecondary"
                    app:spinning_bar_padding="7dp"
                    app:spinning_bar_width="5dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lg_register_button"
            style="@style/MyTextButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/register_button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/or_register"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <View
            android:id="@+id/reveal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:elevation="10dp"
            android:visibility="invisible" />
    </RelativeLayout>
</layout>